# moderne-visualizations-misc

./: .gitignore  CATALOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README.rst  catalog.csv  catalog.json  catalog_columns.csv  moderne-visualizations.html  pyproject.toml
.claude/: settings.local.json
.claude/.claude/: settings.json
.github/workflows/: checks.yml  prerelease.yml  publish.yml
html-visualizations/: README.md  architectural_stability_scatter.html  cobol_find_copybook.html  cobol_relationships.html  code_quality_executive_dashboard.html  code_smell_severity_stacked_bar.html  comment_language_distribution.html  complexity_vs_test_gaps_bubble.html  composite_recipe_results_sankey.html  coupling_cohesion_quadrant.html  cyclomatic_complexity_heatmap.html  cyclomatic_complexity_risk_matrix.html  dependency_cycle_network.html  dependency_usage_violin.html  dependency_usage_violin_nodejs.html  dependency_vulnerabilities.html  dependency_vulnerabilities_npm.html  eslint_problems.html  eslint_problems_by_repo.html  find_source_files.html  gradle_wrappers.html  index.html  java_versions_by_sourceset.html  java_versions_in_use.html  language_composition.html  language_composition_by_folder.html  language_composition_by_repo.html  lst_provenance.html  maven_parent_poms.html  method_risk_radar.html  moderne-visualizations.html  parse_failure_stacktraces.html  portfolio_health_sunburst.html  portfolio_quality_comparison_violin.html  prethink_all.html  recipe_performance.html  release_all.html  release_metro_map.html  release_metro_plan.html  release_metro_waves.html  (+13 more)
html-visualizations/_shared/: common.js  styles.css
moderne_visualizations_misc/: architectural_stability_scatter.ipynb  call_graph.ipynb  call_graph_data_grid.ipynb  call_graph_uml.ipynb  cobol_find_copy_book.ipynb  cobol_find_copybook.ipynb  cobol_relationships.ipynb  cobol_relationships_data_grid.ipynb  code_quality_data_grid.ipynb  code_quality_executive_dashboard.ipynb  code_smell_severity_stacked_bar.ipynb  comment_language_distribution.ipynb  complexity_vs_test_gaps_bubble.ipynb  composite_recipe_results_sankey.ipynb  coupling_cohesion_quadrant.ipynb  cyclomatic_complexity_heatmap.ipynb  cyclomatic_complexity_risk_matrix.ipynb  dependency_cycle_network.ipynb  dependency_report.ipynb  dependency_tree_view.ipynb  dependency_tree_view_javascript.ipynb  dependency_tree_view_nodejs_ss.ipynb  dependency_usage_violin.ipynb  dependency_usage_violin_gradle.ipynb  dependency_usage_violin_maven.ipynb  dependency_usage_violin_nodejs.ipynb  dependency_usage_violin_nodejs_lint.ipynb  dependency_usage_violin_nodejs_ui.ipynb  dependency_usage_violin_nodejs_utility.ipynb  dependency_usage_violin_nuget.ipynb  dependency_vulnerabilities.ipynb  dependency_vulnerabilities_npm.ipynb  dependency_vulnerabilities_nuget.ipynb  effective_maven_settings.ipynb  embeddings_clustering.ipynb  end_of_life_executive_dashboard.ipynb  eslint_problems.ipynb  eslint_problems_by_repo.ipynb  find_methods.ipynb  find_methods_ai.ipynb  (+44 more)
moderne_visualizations_misc/dev/: call_graph.yml  parse_failure_analysis.ipynb
moderne_visualizations_misc/reusable/: data_loader.py  quality_utils.py  release_metro_utils.py  tree_view_nodejs.py  violin_nodejs.py
moderne_visualizations_misc/specs/: architectural_stability_scatter.yml  call_graph.yml  call_graph_data_grid.yml  call_graph_uml.yml  cobol_find_copy_book.yml  cobol_find_copybook.yml  cobol_relationships.yml  cobol_relationships_data_grid.yml  code_quality_data_grid.yml  code_quality_executive_dashboard.yml  code_smell_severity_stacked_bar.yml  comment_language_distribution.yml  complexity_vs_test_gaps_bubble.yml  composite_recipe_results_sankey.yml  core_categories.yml  coupling_cohesion_quadrant.yml  cyclomatic_complexity_heatmap.yml  cyclomatic_complexity_risk_matrix.yml  dependency_cycle_network.yml  dependency_tree_view.yml  dependency_tree_view_nodejs.yml  dependency_tree_view_nodejs_build_tools.yml  dependency_tree_view_nodejs_db.yml  dependency_tree_view_nodejs_forms.yml  dependency_tree_view_nodejs_lint.yml  dependency_tree_view_nodejs_rtc.yml  dependency_tree_view_nodejs_security.yml  dependency_tree_view_nodejs_ss.yml  dependency_tree_view_nodejs_state.yml  dependency_tree_view_nodejs_testing.yml  dependency_tree_view_nodejs_ui.yml  dependency_tree_view_nodejs_utility.yml  dependency_usage_violin.yml  dependency_usage_violin_gradle.yml  dependency_usage_violin_jackson.yml  dependency_usage_violin_maven.yml  dependency_usage_violin_nodejs.yml  dependency_usage_violin_nodejs_build_tools.yml  dependency_usage_violin_nodejs_db.yml  dependency_usage_violin_nodejs_forms.yml  (+58 more)
samples/: CommonStaticAnalysis_SourcesFileResults.csv  call_graph.csv  class_quality_metrics.csv  cobol_find_copy_book.csv  cobol_find_copybook.csv  cobol_relationships.csv  code_smells.csv  comments_language.csv  dependency-report.csv  dependency_tree_view.csv  dependency_tree_view_nodejs.csv  dependency_usage_violin.csv  dependency_usage_violin_nodejs.csv  dependency_vulnerabilities.csv  dependency_vulnerabilities_npm.csv  effective_maven_settings.csv  end_of_life_dependencies.csv  find_methods.csv  find_methods_ai.csv  find_source_files.csv  github_secrets_in_use.csv  gradle_wrappers.csv  java_versions_by_sourceset.csv  java_versions_in_use.csv  language_composition.csv  language_composition_by_folder.csv  lst_provenance.csv  maven_parent_poms.csv  package_quality_metrics.csv  parse_failure_analysis.csv  parse_failure_kotlin.csv  project_coordinates.csv  recipe_performance.csv  recommendations.csv  release_metro_dependencies_in_use.csv  release_metro_parent_relationships.csv  spring_component_relationships.csv  spring_components.csv  sql_crud.csv  stacktower.csv  (+4 more)
samples/v2/: org.openrewrite.table.ParseFailures.csv  (+22 more)
scripts/: check_options.py  check_sentence_casing.py  generate_catalog.py  generate_preview_images.py
(+2 files in other folders)
