# @see https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "moderne_visualizations_misc"
version = "1.0.1"
description = "Miscellaneous visualizations for the Moderne platform"
authors = [
    { name = "Jonathan Schneider", email = "jonathan@moderne.io" },
    { name = "Kyle Scully", email = "kyle@moderne.io" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "code-data-science==2.1.2",
    "graphviz==0.20.1",
    "ipython==8.13.0",
    "matplotlib>=3.8,<4.0",
    "nbformat==5.9.0",
    "pandas==2.0.3",
    "plotly==5.14.1",
    "typing-extensions",
    "umap-learn==0.5.5",
    "networkx==3.1",
    "numpy>=1.26,<2.0",
]

[dependency-groups]
dev = [
    "poethepoet",
    "nbqa",
    "ruff",
    "nb_mypy",
    "ipykernel",
    "papermill",
    "notebook>=7.4.5",
]
ci = ["poethepoet", "python-semantic-release", "papermill", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/moderneinc/visualizations-misc"

[tool.setuptools.packages.find]
include = ["moderne_visualizations_misc"]
exclude = ["samples", "scripts"]

[tool.poe.tasks]
check-types = "nbqa mypy --ignore-missing-imports ./moderne_visualizations_misc"
format = "nbqa 'ruff format' ./moderne_visualizations_misc --nbqa-shell"
lint = "nbqa 'ruff check' ./moderne_visualizations_misc --nbqa-shell"
fix = "nbqa 'ruff check --fix' ./moderne_visualizations_misc --nbqa-shell"
check-options = "python3 scripts/check_options.py"
check-sentence-casing = "python3 scripts/check_sentence_casing.py"
check-all = ["format", "check-options", "check-sentence-casing"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
