# @see https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "moderne_visualizations_misc"
version = "1.8.2"
description = "Miscellaneous visualizations for the Moderne platform"
authors = [
    { name = "Jonathan Schneider", email = "jonathan@moderne.io" },
    { name = "Kyle Scully", email = "kyle@moderne.io" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "code-data-science==2.2.0",
    "graphviz==0.20.1",
    # Ranged (not pinned) so the resolver picks a build matching the running
    # interpreter: each release declares its own requires-python, so 3.9 lands
    # on numpy 2.0 / matplotlib 3.9 while 3.14 lands on numpy 2.5 / matplotlib
    # 3.11. The old hard pins (pandas 2.0.3 / numpy 1.24.4 / matplotlib 3.7.1)
    # had no 3.12+ wheels, which is what blocked newer Pythons.
    # numpy floor is 2.0, not 2.1: 2.1 requires >=3.10 and would drop 3.9.
    "matplotlib>=3.9",
    "pandas>=2.2,<3.0",
    "plotly>=5.14.1",
    "typing-extensions",
    "networkx>=3.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "poethepoet",
    "nbqa",
    "ruff",
    "nb_mypy",
    "ipykernel",
    "papermill",
    "notebook>=7.4.5",
]
ci = ["poethepoet", "python-semantic-release", "papermill", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/moderneinc/visualizations-misc"

[tool.setuptools.packages.find]
include = ["moderne_visualizations_misc"]
exclude = ["samples", "scripts"]

[tool.poe.tasks]
check-types = "nbqa mypy --ignore-missing-imports ./moderne_visualizations_misc"
format = "nbqa 'ruff format' ./moderne_visualizations_misc --nbqa-shell"
lint = "nbqa 'ruff check' ./moderne_visualizations_misc --nbqa-shell"
fix = "nbqa 'ruff check --fix' ./moderne_visualizations_misc --nbqa-shell"
check-options = "python3 scripts/check_options.py"
check-sentence-casing = "python3 scripts/check_sentence_casing.py"
check-all = ["format", "check-options", "check-sentence-casing"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
