# @see https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "moderne_visualizations_misc"
version = "1.9.0"
description = "Miscellaneous visualizations for the Moderne platform"
authors = [
    { name = "Jonathan Schneider", email = "jonathan@moderne.io" },
    { name = "Kyle Scully", email = "kyle@moderne.io" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "code-data-science==2.2.0",
    "graphviz==0.20.1",
    # Loosen pins to allow versions supporting 3.11 through 3.14. The old hard
    # pins on the compiled deps (pandas 2.0.3 / numpy 1.24.4 / matplotlib 3.7.1)
    # had no 3.12+ wheels, which is what blocked newer Pythons.
    "matplotlib>=3.9",
    "pandas>=2.2,<3.0",
    "plotly>=5.14.1",
    "typing-extensions",
    "networkx>=3.2",
    "numpy>=2.1",
]

[dependency-groups]
dev = [
    "poethepoet",
    "nbqa",
    "ruff",
    "nb_mypy",
    "ipykernel",
    "papermill",
    "notebook>=7.4.5",
]
ci = ["poethepoet", "python-semantic-release", "papermill", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/moderneinc/visualizations-misc"

[tool.setuptools.packages.find]
include = ["moderne_visualizations_misc"]
exclude = ["samples", "scripts"]

[tool.poe.tasks]
check-types = "nbqa mypy --ignore-missing-imports ./moderne_visualizations_misc"
format = "nbqa 'ruff format' ./moderne_visualizations_misc --nbqa-shell"
lint = "nbqa 'ruff check' ./moderne_visualizations_misc --nbqa-shell"
fix = "nbqa 'ruff check --fix' ./moderne_visualizations_misc --nbqa-shell"
check-options = "python3 scripts/check_options.py"
check-sentence-casing = "python3 scripts/check_sentence_casing.py"
generate-catalog = "python3 scripts/generate_catalog.py"
check-catalog = "python3 scripts/generate_catalog.py --check"
check-all = ["format", "check-options", "check-sentence-casing", "check-catalog"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
